--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,4 @@
-- solutions überarbeiten (forms, amount of balls, holes in fence)
-- story ergänzen
-- hiding cells evtl.
-- bilder im readme?
--> vor den screenshots the pics are designed and drawn by us
-- falls ja: screenshots einfügen /passende bilder (beim start nihct gedrückter button)
-- redundante solutions bei erklärung der räume evtl löschen?
-- empfehlung am anfang: PLAY IT FIRST SPOILERS AHEAD
-- einfügen von der inspirierten quelle (für childsroomrätsel)
-- link zu musik
-
--> 1. readme
--> 2. story
--> 3. spiel
--> 4. programming jouney + screenshots
--> 5.code unso
-
-Beispiel für screenshots/walkthrough
-- raum1: 
--> erklärung zum aussehen
--> screenshot
--> lösung des raums
-
-->jo die enden sind so, weil er hat entzug von emma nh
-
+matplotlib==3.3.4
+numpy==1.19.5
+pandas==1.1.5
+pygame==2.1.2
